<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pairs_action_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/base_margin"
        android:contentDescription="@null"
        android:padding="6dp"
        android:src="@drawable/ic_sort"
        app:layout_constraintBottom_toTopOf="@id/pairs_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/pairs_currencies_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base_margin"
        app:layout_constraintBottom_toBottomOf="@id/pairs_action_button"
        app:layout_constraintEnd_toStartOf="@id/pairs_action_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pairs_action_button" />

    <TextView
        android:id="@+id/pairs_currencies_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/popular_currencies_empty"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/pairs_action_button"
        app:layout_constraintEnd_toStartOf="@id/pairs_action_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/pairs_action_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pairs_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairs_action_button" />

    <ProgressBar
        android:id="@+id/pairs_list_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairs_action_button" />

    <TextView
        android:id="@+id/pairs_list_empty_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:text="@string/pairs_list_empty_holder"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairs_action_button" />

    <Button
        android:id="@+id/pairs_list_empty_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin"
        android:paddingHorizontal="@dimen/base_margin"
        android:paddingVertical="@dimen/item_margin"
        android:text="@string/pairs_list_empty_try_again"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairs_list_empty_holder" />

</androidx.constraintlayout.widget.ConstraintLayout>